# bazel_cross_toolchains

./: BUILD  MODULE.bazel
examples/: BUILD.bazel  MODULE.bazel
toolchain/: BUILD  BUILD.bazel  u22_aarch64_clang.bzl  u22_aarch64_gcc.bzl  u22_x86_64_clang.bzl
